--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,3 +32,8 @@ layout: base
     </div>
   </div>
 </div>
+
+<script src="/js/jquery.min.js"></script>
+{% include buttons.html %}
+</body>
+</html>
