--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -85,9 +85,9 @@
 		  {% endif %}
 	    </p>
 	        <!-- Please don't remove this, keep my open source work credited :) -->
-		<!-- <p class="theme-by text-muted"> -->
-		  <!-- ABN: 46 823 972 343 -->
-		<!-- </p> -->
+		<p class="theme-by text-muted">
+		  ABN: 46 823 972 343
+		</p>
 	        <!-- Please don't remove this, keep my open source work credited :) -->
 		<p class="theme-by text-muted">
 		  Theme by
