update bluesky replace facebook

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,10 @@
         <ul class="list-inline text-center footer-links">
           {% if site.author.facebook and site.footer-links-active.facebook %}
           <li>
-            <a href="https://www.facebook.com/{{ site.author.facebook }}" title="Facebook">
+            <a href="https://bsky.app/profile/{{ site.author.facebook }}" title="Bluesky">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-cloud fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
