--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,20 +5,20 @@
         <ul class="list-inline text-center footer-links">
           {% if site.author.facebook and site.footer-links-active.facebook %}
           <li>
-            <a href="https://bsky.app/profile/{{ site.author.facebook }}" title="Bluesky">
+            <a href="https://facebook.com/{{ site.author.facebook }}" title="Facebook">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-cloud fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
           {% endif %}
           {% if site.author.github and site.footer-links-active.github %}
           <li>
-            <a href="https://github.com/{{ site.author.github }}" title="GitHub">
+            <a href="https://bsky.app/profile/austevolsoc.bsky.social" title="Bluesky">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-cloud fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
